# sourcepawn-lexer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: lexer.rs  lib.rs  pragma.rs  token.rs  token_kind.rs
tests/: define.rs  include.rs  pragma.rs
tests/snapshots/: define__define_line_continuation.snap  define__define_line_continuation_carriage_return.snap  define__define_no_line_break.snap  define__define_no_value.snap  define__define_simple.snap  define__define_trailing_block_comment.snap  define__define_trailing_line_comment.snap  define__define_with_block_comment.snap  define__define_with_block_comment_and_line_continuation.snap  define__define_with_trailing_line_continuated_multiline_block_comment.snap  define__define_with_trailing_multiline_block_comment.snap  include__include_line_continuation_1.snap  include__include_simple_1.snap  include__opening_chevron_1.snap  pragma__pragma_line_continuation.snap  pragma__pragma_line_continuation_carriage_return.snap  pragma__pragma_no_line_break.snap  pragma__pragma_simple.snap  pragma__pragma_trailing_block_comment.snap  pragma__pragma_trailing_line_comment.snap  pragma__pragma_unicode.snap  pragma__pragma_with_block_comment.snap  pragma__pragma_with_block_comment_and_line_continuation.snap  pragma__pragma_with_trailing_line_continuated_multiline_block_comment.snap  pragma__pragma_with_trailing_multiline_block_comment.snap
tests/utils/: mod.rs
