[package]
name = "sourcepawn_lexer"
version = "0.1.3"
edition = "2021"
description = "Lossless SourcePawn lexer"
documentation = "https://docs.rs/sourcepawn_lexer"
readme = "README.md"
repository = "https://github.com/Sarrus1/sourcepawn-lexer"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]

[lib]
doctest = false

[dependencies]
lazy_static = "1.4.0"
logos = "0.12.1"
lsp-types = "0.94.0"
regex = "1.7.3"

[dev-dependencies]
criterion = "0.3"
minreq = { version = "2.7.0", features = ["https"] }

[[bench]]
name = "bench_main"
harness = false
path = "benches/bench_main.rs"
