[package]
name = "sourcepawn_lexer"
version = "0.3.0"
edition = "2021"
description = "Lossless SourcePawn lexer"
documentation = "https://docs.rs/sourcepawn_lexer"
readme = "README.md"
repository = "https://github.com/Sarrus1/sourcepawn-lexer"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]

[lib]
doctest = false

[dependencies]
lazy_static = "1.4.0"
logos = "0.12.1"
lsp-types = "0.94.0"
regex = "1.7.3"
smol_str = "0.2.1"
serde = "1.0.147"
serde_json = { version = "^1.0.83", features = ["preserve_order"] }
text-size = "1.1.1"

[dev-dependencies]
criterion = "0.3"
minreq = { version = "2.7.0", features = ["https"] }
insta = { version = "1.28.0", features = ["glob", "redactions", "json"] }

[[bench]]
name = "bench_main"
harness = false
path = "benches/bench_main.rs"
